Fix database setup and disable premium restrictions

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "db:deploy": "drizzle-kit push",
+    "db:setup": "node scripts/setup-db.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.6",
