Configure application for Ubuntu server deployment with PostgreSQL
- Updated database configuration to use local PostgreSQL
- Added deployment scripts for Ubuntu server
- Created PM2 configuration for production
- Added environment configuration files
- Created comprehensive deployment documentation
- Added database setup and management scripts

--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "color-generator",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "db:generate": "drizzle-kit generate",
-    "db:push": "drizzle-kit push",
-    "db:migrate": "drizzle-kit migrate",
-    "db:deploy": "drizzle-kit push",
-    "db:setup": "node scripts/setup-db.js"
-  },
+        "scripts": {
+                "dev": "next dev",
+                "build": "next build",
+                "start": "next start",
+                "lint": "next lint",
+                "db:generate": "drizzle-kit generate",
+                "db:push": "drizzle-kit push",
+                "db:migrate": "drizzle-kit migrate",
+                "db:deploy": "drizzle-kit push",
+                "db:setup": "node scripts/setup-db.js",
+                "deploy": "chmod +x scripts/deploy.sh && ./scripts/deploy.sh",
+                "setup-server": "chmod +x scripts/setup-server.sh && ./scripts/setup-server.sh",
+                "setup-db": "chmod +x scripts/database-setup.sh && ./scripts/database-setup.sh"
+        },
   "dependencies": {
     "@clerk/nextjs": "^5.3.6",
     "@clerk/themes": "^2.1.24",
@@ -27,7 +30,6 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@vercel/postgres": "^0.9.0",
     "chroma-js": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,6 +39,7 @@
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
+    "postgres": "^3.4.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
