--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "color-generator",
   "version": "0.1.0",
   "private": true,
-        "scripts": {
-                "dev": "next dev",
-                "build": "next build",
-                "start": "next start",
-                "lint": "next lint",
-                "db:generate": "drizzle-kit generate",
-                "db:push": "drizzle-kit push",
-                "db:migrate": "drizzle-kit migrate",
-                "db:deploy": "drizzle-kit push",
-                "db:setup": "node scripts/setup-db.js",
-                "deploy": "chmod +x scripts/deploy.sh && ./scripts/deploy.sh",
-                "setup-server": "chmod +x scripts/setup-server.sh && ./scripts/setup-server.sh",
-                "setup-db": "chmod +x scripts/database-setup.sh && ./scripts/database-setup.sh"
-        },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:deploy": "drizzle-kit push",
+    "db:setup": "node scripts/setup-db.js",
+    "deploy": "chmod +x scripts/deploy.sh && ./scripts/deploy.sh",
+    "setup-server": "chmod +x scripts/setup-server.sh && ./scripts/setup-server.sh",
+    "setup-db": "chmod +x scripts/database-setup.sh && ./scripts/database-setup.sh"
+  },
   "dependencies": {
     "@clerk/nextjs": "^5.3.6",
     "@clerk/themes": "^2.1.24",
@@ -26,6 +26,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
